--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 
       <div ng-controller="TabController as tab">
         <!-- Website groups -->
-        <section class="col-sm-4" id="groups">
+        <section class="col-sm-4" id="groups" ng-controller="GroupController as group">
           <div class="list-group">
             <button type="button" class="list-group-item" ng-class="{ 'active':tab.isSelected(0)}" ng-click="tab.selectTab(0)">
             All websites
@@ -42,7 +42,7 @@
             </span>
             </button>
             <!-- Show groups on the page and set tab value when clicked -->
-            <div ng-repeat="group in app.groups">
+            <div ng-repeat="group in group.groups">
               <button type="button" class="list-group-item" ng-class="{ active:tab.isSelected(group.id)}" ng-click="tab.selectTab(group.id)">
                 {{ group.name }}
                 <span class="badge">
@@ -84,20 +84,20 @@
         </section>
 
         <!-- Group table -->
-        <section class="col-sm-4" ng-hide="tab.isSelected(0) || !app.hasSites(tab.tab)">
+        <section class="col-sm-4" ng-hide="tab.isSelected(0) || !app.hasSites(tab.tab)" ng-controller="GroupController as group">
           <table class="table table-bordered">
             <tr>
               <th scope="col">URL</th>
               <th scope="col" colspan="2">Action</th>
             </tr>
-            <tr ng-repeat="site in app.groups[tab.tab - 1].sites">
+            <tr ng-repeat="site in group.groups[tab.tab - 1].sites">
               <td> <a href="https://{{site}}/">{{ site }}</a></td>
               <td> <a href="#" class="button">Edit</a> </td>
-              <td> <a href="#" class="button" ng-click="app.removeFromGroupOnly(site)">Delete</a></td>
+              <td> <a href="#" class="button" ng-click="group.removeFromGroupOnly(site)">Delete</a></td>
             </tr>
           </table>
-          <button type="button" class="btn btn-default" data-toggle="modal" data-target="#edit-group-modal" ng-click="app.setGroupToEdit(tab.tab)">Edit Group</button>
-          <button type="button" class="btn btn-danger" ng-click="app.removeGroup(tab.tab - 1, app.groups[tab.tab-1].name)">Delete Group</button>
+          <button type="button" class="btn btn-default" data-toggle="modal" data-target="#edit-group-modal" ng-click="group.setGroupToEdit(tab.tab)">Edit Group</button>
+          <button type="button" class="btn btn-danger" ng-click="group.removeGroup(tab.tab - 1, group.groups[tab.tab-1].name)">Delete Group</button>
         </section>
       </div>
 
@@ -139,11 +139,11 @@
             </div>
 
             <!-- Website group form -->
-            <div class="form-group" ng-show="app.groups.length">
+            <div class="form-group" ng-show="app.groups.length" ng-controller="GroupController as group">
               <label for="pick-group" class="col-sm-2 control-label">Groups</label>
               <div class="col-sm-10" id="pick-group">
 
-                <div ng-repeat="group in app.groups">
+                <div ng-repeat="group in group.groups">
                   <div class="checkbox">
                     <label>
                       <input
@@ -204,11 +204,11 @@
             </div>
 
             <!-- Website group form -->
-            <div class="form-group" ng-show="app.groups.length">
+            <div class="form-group" ng-show="app.groups.length" >
               <label for="pick-group" class="col-sm-2 control-label">Groups</label>
-              <div class="col-sm-10" id="pick-group">
+              <div class="col-sm-10" id="pick-group" ng-controller="GroupController as group">
 
-                <div ng-repeat="group in app.groups">
+                <div ng-repeat="group in group.groups">
                   <div class="checkbox">
                     <label>
                       <input
@@ -233,92 +233,95 @@
     </div>
   </div>
 
-  <!-- Add group modal -->
-  <div class="modal fade" id="group-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Add group</h4>
+
+  <div ng-controller="GroupController as group">
+    <!-- Add group modal -->
+    <div class="modal fade" id="group-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Add group</h4>
+          </div>
+          <div class="modal-body">
+
+            <form class="form-horizontal" ng-submit="group.addGroup()">
+
+              <!-- Group name form -->
+              <div class="form-group">
+                <label for="group-name" class="col-sm-3 control-label">Group name</label>
+                <div class="col-sm-9">
+                  <input ng-model="group.name" type="text" class="form-control" id="group-name" required>
+                </div>
+              </div>
+
+              <!-- Group color form -->
+              <div class="form-group">
+                <label for="group-color" class="col-sm-3 control-label">Group color</label>
+                <div class="col-sm-9">
+                  <select name="selectColor" id="selectColor" class="form-control" ng-model="group.color">
+                    <option value="">- None -</option>
+                    <option value="red">Red</option>
+                    <option value="green">Green</option>
+                    <option value="blue">Blue</option>
+                    <option value="yellow">Yellow</option>
+                    <option value="orange">Orange</option>
+                  </select>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="modal-body">
+    </div>
 
-          <form class="form-horizontal" ng-submit="app.addGroup()">
+    <!-- Edit group modal -->
+    <div class="modal fade" id="edit-group-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Edit group</h4>
+          </div>
+          <div class="modal-body">
 
-            <!-- Group name form -->
-            <div class="form-group">
-              <label for="group-name" class="col-sm-3 control-label">Group name</label>
-              <div class="col-sm-9">
-                <input ng-model="app.name" type="text" class="form-control" id="group-name" required>
+            <form class="form-horizontal">
+
+              <!-- Group name form -->
+              <div class="form-group">
+                <label for="group-name" class="col-sm-3 control-label">Group name</label>
+                <div class="col-sm-9">
+                  <input ng-model="group.groupToEdit.name" type="text" class="form-control" id="group-name" required>
+                </div>
               </div>
-            </div>
 
-            <!-- Group color form -->
-            <div class="form-group">
-              <label for="group-color" class="col-sm-3 control-label">Group color</label>
-              <div class="col-sm-9">
-                <select name="selectColor" id="selectColor" class="form-control" ng-model="app.color">
-                  <option value="">- None -</option>
-                  <option value="red">Red</option>
-                  <option value="green">Green</option>
-                  <option value="blue">Blue</option>
-                  <option value="yellow">Yellow</option>
-                  <option value="orange">Orange</option>
-                </select>
+              <!-- Group color form -->
+              <div class="form-group">
+                <label for="group-color" class="col-sm-3 control-label">Group color</label>
+                <div class="col-sm-9">
+                  <select name="selectColor" id="selectColor" class="form-control" ng-model="app.groupToEdit.color">
+                    <option value="">- None -</option>
+                    <option value="red">Red</option>
+                    <option value="green">Green</option>
+                    <option value="blue">Blue</option>
+                    <option value="yellow">Yellow</option>
+                    <option value="orange">Orange</option>
+                  </select>star
+                </div>
               </div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Save changes</button>
-            </div>
-          </form>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Edit group modal -->
-  <div class="modal fade" id="edit-group-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Edit group</h4>
-        </div>
-        <div class="modal-body">
-
-          <form class="form-horizontal">
-
-            <!-- Group name form -->
-            <div class="form-group">
-              <label for="group-name" class="col-sm-3 control-label">Group name</label>
-              <div class="col-sm-9">
-                <input ng-model="app.groupToEdit.name" type="text" class="form-control" id="group-name" required>
-              </div>
-            </div>
-
-            <!-- Group color form -->
-            <div class="form-group">
-              <label for="group-color" class="col-sm-3 control-label">Group color</label>
-              <div class="col-sm-9">
-                <select name="selectColor" id="selectColor" class="form-control" ng-model="app.groupToEdit.color">
-                  <option value="">- None -</option>
-                  <option value="red">Red</option>
-                  <option value="green">Green</option>
-                  <option value="blue">Blue</option>
-                  <option value="yellow">Yellow</option>
-                  <option value="orange">Orange</option>
-                </select>star
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
   {{app.data}}
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
